# Bored_Leaf_Engine

./: .gitignore  Bored_Leaf_Engine.cpp  CMakeLists.txt  CMakePresets.json  README.md
Bored_Leaf_Engine_Docs/.obsidian/: workspace.json
Bored_Leaf_Engine_Docs/Docs/: Cheat Sheet.md  Distribution & External Developer Usage.md  General.md
Bored_Leaf_Engine_Docs/EngineArchVis/: D3.js.md
Bored_Leaf_Engine_Docs/Systems/: Systems Documentation.md
Bored_Leaf_Engine_Docs/Systems/EngineCore/: Consider.md  EngineCore.md
Bored_Leaf_Engine_Docs/Systems/GameDemo/: GameDemo.md
Bored_Leaf_Engine_Docs/Systems/InputSystem/: InputSystem.md
Bored_Leaf_Engine_Docs/Systems/TOBE systems/: ECS.md  Loggin.md
Bored_Leaf_Engine_Docs/Systems/VulkanRenderer/: VulkanRenderer.md
Bored_Leaf_Engine_Docs/Systems/WindowSystem/: WindowSystem.md
Engine/: CMakeLists.txt
Engine/BLE_EngineCore/: BLE_EngineCore.cpp  BLE_EngineCore.h  CMakeLists.txt
Engine/BLE_Logger/: BLE_Logger.cpp  BLE_Logger.h  CMakeLists.txt
Engine/EngineCore/: BLE_EngineCore.cpp  Bored_Leaf_Engine.cpp  CMakeLists.txt
GameDemo/: CMakeLists.txt  main.cpp
Utils/: CMakeLists.txt
Utils/BLE_Logger/: BLE_LOGGER.cpp  BLE_LOGGER.h  BLE_Logger.cpp  CMakeLists.txt
